[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/NothingButtonsHolder.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.447059, 0.0745098, 0.0745098, 1 )
corner_detail = 1

[node name="ControlKeyboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="NothingButtonsHolder" type="GridContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3
script = ExtResource( 1 )

[node name="NothingBurns" type="TextureRect" parent="MarginContainer/NothingButtonsHolder"]
margin_right = 314.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
expand = true
stretch_mode = 1

[node name="NothingDrowns" type="TextureRect" parent="MarginContainer/NothingButtonsHolder"]
margin_left = 334.0
margin_right = 648.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
expand = true
stretch_mode = 1

[node name="NothingStings" type="TextureRect" parent="MarginContainer/NothingButtonsHolder"]
margin_left = 668.0
margin_right = 982.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
expand = true
stretch_mode = 1

[node name="NothingGrabs" type="TextureRect" parent="MarginContainer/NothingButtonsHolder"]
margin_top = 120.0
margin_right = 314.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
expand = true
stretch_mode = 1

[node name="NothingFlies" type="TextureRect" parent="MarginContainer/NothingButtonsHolder"]
margin_left = 334.0
margin_top = 120.0
margin_right = 648.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
expand = true
stretch_mode = 1

[node name="NothingMatters" type="TextureRect" parent="MarginContainer/NothingButtonsHolder"]
margin_left = 668.0
margin_top = 120.0
margin_right = 982.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
expand = true
stretch_mode = 1
